co2 per ogni figura all'interno

--- a/app/templates/includes/user_menu.html
+++ b/app/templates/includes/user_menu.html
@@ -41,6 +41,9 @@
         <li><a class="dropdown-item text-dark" href="/manage_employee">
             <i class="bi bi-person-x me-2"></i>Manage Employee
         </a></li>
+        <li><a class="dropdown-item text-dark" href="/select_company_to_manage_product">
+            <i class="bi bi-box me-2"></i>Manage Product
+        </a></li>
         <li><a class="dropdown-item text-dark" href="/manage_tokens">
             <i class="bi bi-coin me-2"></i>Manage Token
         </a></li>
