--- a/app/templates/product_of_seller.html
+++ b/app/templates/product_of_seller.html
@@ -53,9 +53,11 @@
     
 
     <main class="container mb-5">
+
         <div class="row g-4">
             {% for product in product_info_list %}
-                <div class="col-md-6 col-lg-4">
+                <!--<div class="col-md-6 col-lg-4">-->
+                    <div class="col"></div>
                     <div class="card h-100 product-card d-flex align-items-center justify-content-center text-center" data-bs-toggle="modal" data-bs-target="#product{{ product['serial_ids'][0] }}Modal">
 
                         <div class="card-body d-flex flex-column align-items-center justify-content-center">
@@ -104,7 +106,7 @@
                         </div>
                     </div>
                 
-                </div>
+            </div>
 
             {% endfor %}
         </main>
